--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<h1>Hi!</h1>
+<!DOCTYPE html>
+<head>
+    <style>
+        p {
+            background-color: aquamarine;
+        }
+    </style>
+</head>
+<body>
+    <p>This WORKS!</p>
+    <h1>Test</h1>
+</body>
