--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <head>
     <style>
-        p {
+        body {
             background-color: aquamarine;
         }
     </style>
+    <script>
+        const ws = new WebSocket("172.0.0.1:1234")
+        ws.onerror(alert("error"))
+        ws.onopen(alert("open"))
+        ws.onmessage(function message(data) {alert(data)})
+    </script>
 </head>
 <body>
     <p>This WORKS!</p>
